Profile Image upload completed and changes in Header

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 body {
-  background-color: rgb(252, 230, 203);
+  background-color: #efe7e2;
   font-family: "Poppins", sans-serif;
 }
